# ReplicateAI

./: .gitignore  DEVELOPMENT.md  Makefile  PAPER_INDEX.json  README.md  hello.py  pyproject.toml  val_history.json
paper_template/notebook/: template_notebook.ipynb
paper_template/src/: main.py
scripts/: add_paper.py  launch_slurm.sh
stage2_representation/2017_AttentionIsAllYouNeed/: README.md  references.bib  report.md
stage2_representation/2017_AttentionIsAllYouNeed/figures/: model
stage2_representation/2017_AttentionIsAllYouNeed/notebook/: Attention Is All You Need_demo.ipynb
stage2_representation/2017_AttentionIsAllYouNeed/scripts/: launch_fsdp_training.sh
stage2_representation/2017_AttentionIsAllYouNeed/src/: data.py  model.py  optimizer.py  tokenizer.py  tokenizer_de_bpe.json  tokenizer_en_bpe.config.json  tokenizer_en_bpe.json  tokenizer_en_simple.json  train_multi30k.py  train_multi30k_fsdp.py  train_toy.py  train_wmt14.py  utils.py
stage2_representation/2018_BERT/: README.md  report.md
stage2_representation/2018_BERT/notebook/: BERT_demo.ipynb
stage2_representation/2018_BERT/src/: main.py  model.py
stage2_representation/2020_VisionTransformer/: README.md  references.bib  report.md
stage2_representation/2020_VisionTransformer/figures/: model
stage2_representation/2020_VisionTransformer/notebook/: Vision Transformer_demo.ipynb
stage2_representation/2020_VisionTransformer/src/: main.py  model.py
stage2_representation/2021_CLIP/: README.md  report.md
stage2_representation/2021_CLIP/figures/: model
stage2_representation/2021_CLIP/notebook/: CLIP_demo.ipynb
stage2_representation/2021_CLIP/src/: main.py  model.py
