[project]
name = "reproduceai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.2.0",
  "hypothesis>=6.142.2",
  "matplotlib>=3.10.7",
  "nltk>=3.9.2",
  "pytest>=8.4.2",
  "sacrebleu>=2.5.1",
  "sacremoses>=0.1.1",
  "sentencepiece>=0.2.1",
  "tiktoken>=0.12.0",
  "torch>=2.7.0",
  "torchmetrics>=1.8.2",
  "torchview>=0.2.7",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.1",
  "wandb>=0.22.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
